# immutable-helpers

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
include/immu/: immutable.h  pointer.h  shared_ptr.h
tests/: CMakeLists.txt  immutable.cpp  pointer.cpp  shared_pointer.cpp
